--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -690,8 +690,12 @@ body p {
 .header-show {
   width: 300px;
   left: 0;
-  background: var(--contrast-color);
   z-index: 99;
+}
+@media (max-width: 1199px) {
+  .header-show {
+    background: var(--contrast-color);
+  }
 }
 .header-show .navmenu {
   display: block;
